<resources>
    <string name="app_name">Умный дом</string>
    <string name="address_broker">Адрес брокера</string>
    <string name="name">Имя</string>
    <string name="connect">Подключиться</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="send">Отправить</string>

    <string name="next">Продолжить</string>
    <string name="error">Ошибка</string>
    <string name="ok">Ок</string>

    <string name="ready">Готово</string>
    <string name="load_from_gallery">Загрузить из галереи</string>

    <string name="not_access_galery">Необходимо дать доступ к памяти телефона</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="get_photo">Получить фото с камеры</string>
    <string name="exit">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="select_topic">Выбранные топики:</string>
    <string name="messages">Сообщения:</string>
    <string name="add_topic">Подписаться на топик</string>
    <string name="name_topic">Имя топика</string>
    <string name="new_topic">Подписка на топик</string>
    <string name="notification">Оповещение</string>
    <string name="delete_topic">Вы действительно хотите отписаться от</string>
    <string name="empty_topic">Вы не подписаны ни на один топик</string>
    <string name="empty_messages">Список сообщений пуст</string>
    <string name="cancel">Отмена</string>

    <string name="get_current_photo">В текущей момент</string>
    <string name="period_photo">За период</string>
    <string name="select_start_date">Выбрать дату начала</string>
    <string name="selecting_start_time">Выберите время начала</string>
    <string name="selecting_start_date">Выберите дату начала</string>
    <string name="select_end_time">Выбрать конечное время</string>
    <string name="selecting_end_time">Выберите конечное время</string>
    <string name="select_end_date">Выбрать конечную дату</string>
    <string name="selecting_end_date">Выберите конечную дату</string>
    <string name="select_start_time">Выбрать начальное время</string>
    <string name="start_period">Начало периода:</string>
    <string name="end_period">Конец периода:</string>
    <string name="start_date_more_end_date_error">Дата начала должна быть раньше, чем дата окончания</string>
    <string name="geted_photo_from">Получено фото за выбранный период:</string>
    <string name="photo_from_camera">Фото с камеры</string>
    <string name="info_about_broker">Данные брокера</string>
    <string name="confirm_clear_message">Вы действительно хотите очистить список сообщений?</string>
    <string name="photo_by_period">Фото за период</string>
    <string name="not_exist_photo_by_selected_period">Нет фотографий за выбраный промежуток времени.</string>
    <string name="enter_server">Введите адрес брокера</string>

</resources>
