<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_background">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"/>

    <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/main_text_dark"
            android:text="@string/start_period"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignTop="@id/startDateTimeTV"
            android:layout_alignBottom="@id/startDateTimeTV"
            android:gravity="center_vertical"
    />


    <TextView
            android:id="@+id/startDateTimeTV"
            android:layout_below="@id/toolbar"
            android:layout_toEndOf="@id/startDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/link_color"
            tools:text="Time 12:45"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start|center_vertical"
    />

    <TextView
            android:id="@+id/endDateLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/main_text_dark"
            android:text="@string/end_period"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignTop="@id/endDateTimeTV"
            android:layout_alignBottom="@id/endDateTimeTV"
            android:gravity="center_vertical"
    />


    <TextView
            android:id="@+id/endDateTimeTV"
            android:layout_toEndOf="@id/endDateLabelTV"
            android:layout_alignStart="@id/startDateTimeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/link_color"
            tools:text="Time 12:45"
            android:layout_below="@id/startDateTimeTV"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="start|center_vertical"
    />


    <Button
            android:id="@+id/selectStartDateBtn"
            android:layout_centerVertical="true"
            android:layout_below="@id/endDateTimeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/select_start_date"
            android:textSize="12sp"
            android:textColor="@color/main_text_light"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    />

    <Button
            android:id="@+id/selectStartTimeBtn"
            android:layout_below="@id/selectStartDateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_start_time"
            android:textSize="12sp"
            android:textColor="@color/main_text_light"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    />

    <Button
            android:id="@+id/selectEndDateBtn"
            android:layout_below="@id/selectStartTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_end_date"
            android:textSize="12sp"
            android:textColor="@color/main_text_light"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    />

    <Button
            android:id="@+id/selectEndTimeBtn"
            android:layout_below="@id/selectEndDateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_end_time"
            android:textSize="12sp"
            android:textColor="@color/main_text_light"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    />

    <Button
            android:id="@+id/readyBtn"
            android:layout_below="@id/selectEndTimeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_light"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:text="@string/get_photo"
    />

</RelativeLayout>